<?xml version="1.0"?>
<package format="2">
  <name>garmin_cortex</name>
  <version>0.0.0</version>
  <description>Interface with Garmin Cortex devices</description>

  <maintainer email="roland@ccom.unh.edu">Roland Arsenault</maintainer>

  <license>Apache-2.0</license>

  <depend>          audio_common_msgs</depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>    message_generation</build_depend>
  <exec_depend>     message_runtime</exec_depend>
  <depend>          roscpp</depend>

  <export>
  </export>
</package>
